@@ -18,6 +18,7 @@ Version 1.5
 * vmux: option to force 1-bit input
 * vsum: print data rate
 * vdifspec and vdifd: verified operation on 1-bit and 8-bit data
+* filterVDIF: option to run on many files (Usage 2).
 
 Version 1.4
 ~~~~~~~~~~~
